Added copy task into build temporily

--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -24,6 +24,11 @@ jobs:
 #  - template: AzureDevOpsTemplates/Build/dfc-arm-build.yml@dfc-devops
 #    parameters:
 #      ArmTemplateRoot: $(ArmTemplateRoot)
+  - task: CopyFiles@2
+    displayName: 'Copy Arm Templates to Staging'
+    inputs:
+      SourceFolder: '${{ parameters.ArmTemplateRoot }}\'
+      TargetFolder: $(build.artifactstagingdirectory)/Azure/ArmTemplates
   - task: PublishBuildArtifacts@1
     displayName: Publish Artifact
     inputs:
