--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -27,7 +27,7 @@ jobs:
   - task: CopyFiles@2
     displayName: 'Copy Arm Templates to Staging'
     inputs:
-      SourceFolder: '${{ parameters.ArmTemplateRoot }}\'
+      SourceFolder: '$(ArmTemplateRoot)\'
       TargetFolder: $(build.artifactstagingdirectory)/Azure/ArmTemplates
   - task: PublishBuildArtifacts@1
     displayName: Publish Artifact
