--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -27,7 +27,7 @@ jobs:
       ArmTemplateRoot: $(ArmTemplateRoot)
 
   - task: CopyFiles@2
-    displayName: 'Copy APIM policies to staging'
+    displayName: 'Copy APIM policies onto staging'
     inputs:
       SourceFolder: $(ApimPolicyRoot)
       TargetFolder: $(build.artifactstagingdirectory)/Azure/ApimPolicies
